force-app/main/default/objects/InitialEquipment__c/InitialEquipment__c.object-meta.xml
<CustomObject>
    <label>Initial Equipment</label>
    <nameField>
        <displayFormat>EA{000000000}</displayFormat>
        <label>Initial Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initial Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>