force-app/main/default/objects/InitialEquipment__c/fields/GrantedTeaDiscount__c.field-meta.xml
<CustomField>
    <fullName>GrantedTeaDiscount__c</fullName>
    <label>Granted Tea Discount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>