force-app/main/default/objects/InitialEquipment__c/fields/MarkedForFirstOrder__c.field-meta.xml
<CustomField>
    <fullName>MarkedForFirstOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for First Order</label>
    <type>Checkbox</type>
</CustomField>